# Oz_codingSchool

./: .gitignore  pyproject.toml
alembic/versions/: 9a9b385dc146_create_initial_tables.py
app/: main.py
app/apis/: auth.py  patients.py  practice_apis.py  pratice_혜린.py  users.py
app/core/: config.py  dependencies.py  security.py
app/models/: __init__.py  ai_analysis_result.py  medical_record.py  patient.py  user.py  xray_image.py
app/repositories/: ai_analysis_result_repository.py  medical_record_repository.py  patient_repository.py  user_repository.py  xray_image_repository.py
app/schemas/: __init__.py  ai_analysis_result.py  auth.py  enums.py  medical_record.py  patient.py  user.py  xray_image.py
app/services/: ai_analysis_service.py  auth_service.py  medical_record_service.py  patient_service.py  user_service.py
docs/: 1일차_team_rules.md  2일차_git_branch_전략.md  3일차_프로젝트_뜯어보기_혜린.md  4일차_USER_API_명세서.xlsx  4일차_USER_API_설계.md  5일차_환자관리_API_명세서.xlsx  5일차_환자관리_API_설계.md  6일차_폐렴예측_API_명세서.xlsx  6일차_폐렴예측_API_설계.md
static/: apis.js  app.js  pages.js
worker/: model.py
