[project]
name = "ai-health-web-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "bcrypt==4.0.1",
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.135.3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uuid6>=2025.0.1",
]
